AX: Treat AXChildrenInNavigationOrder as AXChildren before adding support for aria-flowto https://bugs.webkit.org/show_bug.cgi?id=194923

Patch by Eric Liang <ericliang@apple.com> on 2019-02-22
Reviewed by Chris Fleizach.

Source/WebCore:

Added AXChildrenInNavigationOrder attribute that returns the same array as from AXChildren. It prevents AppKit from reordering elements from the fallback AXChildren attribute.

Test: accessibility/mac/children-in-navigation-order-returns-children.html

* accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper accessibilityAttributeValue:]):

LayoutTests:

Added test to check AXChildrenInNavigationOrder returns non-empty array from AXChildren.
* accessibility/mac/children-in-navigation-order-returns-children-expected.txt: Added.
* accessibility/mac/children-in-navigation-order-returns-children.html: Added.

Canonical link: https://commits.webkit.org/209332@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@241983 268f45cc-cd09-0410-ab3c-d52691b4dbfc